[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Enviroment/boidAtlas/boid1Atlas.tres" type="Texture" id=1]
[ext_resource path="res://Scripts/Effects/boid.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=3]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float pi = 3.14159265359; //wave width 

void fragment(){
	vec2 scale_UV = UV;
	vec2 wave_uv_offset;
	
	wave_uv_offset.y = ((0.4 / (3.0 + (UV.x * 20.0))) * sin(((1.25 * pi) / 1.0) * UV.x + (TIME * 6.5)));
	
	COLOR = vec4(wave_uv_offset, 0.0, 1.0);
	COLOR = texture(TEXTURE, scale_UV - wave_uv_offset);
}
"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/pi = 3.14159

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 13.5 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.6
emission_shape = 2
emission_box_extents = Vector3( 12, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -8, 0 )
angular_velocity = -720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
linear_accel_random = 1.0
radial_accel = 0.08
scale = 0.09
scale_random = 0.5
scale_curve = SubResource( 3 )

[node name="boid" type="Area2D" groups=["boid"]]
collision_layer = 24576
collision_mask = 24576
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
material = SubResource( 6 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0.5 )
shape = SubResource( 1 )

[node name="vision" type="Area2D" parent="."]
collision_layer = 24576
collision_mask = 24576

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="vision"]
position = Vector2( -2.49084, 0 )
polygon = PoolVector2Array( -18, 26, 13, 33, 57, 19, 57, -19, 13, -33, -18, -26 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 45, 45 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="Particles2D" type="Particles2D" parent="."]
light_mask = 3
z_index = -1
emitting = false
amount = 3
randomness = 0.75
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="rayFolder" type="Node2D" parent="."]
scale = Vector2( 1.2, 1.2 )

[node name="RayCast2D1" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 5, -36 )
collision_mask = 8192

[node name="RayCast2D2" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 5, 36 )
collision_mask = 8192

[node name="RayCast2D3" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 36.6667, -27.5 )
collision_mask = 8192

[node name="RayCast2D4" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 36.667, 27.5 )
collision_mask = 8192

[node name="RayCast2D5" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 66.6667, -5.83333 )
collision_mask = 8192

[node name="RayCast2D6" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 63, 5 )
collision_mask = 8192

[node name="RayCast2D7" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 8192

[connection signal="area_entered" from="vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="vision" to="." method="_on_vision_area_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
